# reporter

./: .gitignore  DEPENDENCIES  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: manage.py  requirements.txt
src/reporter/: settings.py  settings_local.py.example  urls.py  wsgi.py
src/reporter/core/: .gitignore  __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
src/reporter/core/fixtures/: core.menuitem.json
src/reporter/core/management/commands/: cleanup.py  initialimport.py  reindex.py
src/reporter/core/migrations/: 0001_initial.py  0002_add_pr_and_ci_urls.py  0002_add_prurl_and_ciurls.py  0002_auto_20200617_1718.py  0003_add_tags.py  0003_report_json_alter_report_xml.py  0004_auto_20160927_1130.py  0004_remove_report_ciurl.py  0005_alter_report_datetime.py  0005_auto_20160927_1314.py
src/reporter/core/static/: base.css  base.js  report.js
src/reporter/core/static/font/: demo.html  selection.json  style.css
src/reporter/core/static/font/fonts/: icomoon.eot
src/reporter/core/static/libs/twentytwenty/css/: twentytwenty.css
src/reporter/core/templates/: base.html  contributers.html  contributors.html  footer.html  home.html  index.html  navbar.html  report.html  rss.html  rss_title.html
src/reporter/core/templates/home/: carousel.html  getting_started.html  header.html  index.html  news_and_twitter.html  short_news.html
src/reporter/core/templatetags/: append_to_get.py  sectodur.py
